--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,6 @@
 	<title>Hello Web Developers</title>
 </head>
 <body>
-<h1>Hello Web Devs!</h1>
+<h1>Hello Web Developers! We will learn new thing today</h1>
 </body>
 </html>
